Bug 156814 If bookmark file is symlink, mozilla overwrites symlink with a file r=caillon sr=bz